# AI-Fundamentals

./: pyproject.toml
CH_1_LLMs/: 1_API_Calls.ipynb  2_Embeddings.ipynb
CH_2_RAGs/: 1_RAG.ipynb
CH_2_RAGs/chroma_db/: chroma.sqlite3
CH_3_Prompt_Engineering/: Prompting_Types.ipynb
CH_4_Agents/: 1_Tool_Binding copy.ipynb  2_ReAct_Agents.ipynb  3_Structured_Outputs.ipynb  4_Prompt_templates.ipynb  5.1_RAG_Semantic.ipynb  5.2_RAG_Agent.ipynb  6_Agent_Memorary.ipynb
CH_4_Agents/chroma_db_semantic/: chroma.sqlite3
