[project]
name = "ai-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.13",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pypdf>=6.10.1",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
